Fix light/dark mode

--- a/styles/night.css
+++ b/styles/night.css
@@ -1,14 +1,22 @@
 html { scroll-padding-top: 80px; }
 
-body { font-family: sans-serif; text-align: center; background-color: #111111; color: white; margin: 80px auto; margin-bottom: 0px }
+body { font-family: sans-serif; background-color: #111111; color: white; 
+    margin: 80px auto; margin-bottom: 0px; transition: 0.3s ease-out; }
+body * { transition: 0.2s ease-out; }
 h1 { padding: 40px; display: flex; justify-content: left; background-color: #3d4459; color: white; }
+
+/* Textboxes */
 
 .textbox { padding: 20px 60px 20px 60px; background-color: #2E2E2E; margin: 1.5em; text-align: left; color: white; }
 .enterbox { padding: 20px 60px 20px 60px; background-color: #2E2E2E; margin: 1.5em; color: white; }
 
+/* Table */
+
 table { border-collapse: collapse; margin: 1.5em auto; table-layout: fixed; background-color: white; table-layout: auto; width: 1000px; }
 table th { background-color: #ffcdcd; border: 1px solid gray; padding: 8px; }
 table td { border: 1px solid gray; padding: 8px; overflow: hidden; }
+
+/* Navbar */
 
 .navbar { list-style-type: none; margin: 0; padding: 0; background-color: #3d4459; 
     position: fixed; top: 0; width: 100%; overflow: auto; white-space: nowrap; text-align: left }
@@ -37,6 +45,8 @@ a:hover.nav, a:active.nav, #brightness:hover, #brightness:active {
     transition: 0.1s
 }
 
-#brightness { background-color: #3d4459; border: none; background: none; font-size: 1em; }
+#brightness { background-color: #3d4459; border: none; background: none; }
+
+/* Footer */
 
 footer { padding: 40px 0px; background-color: #3d4459; color: white;  width: 100%; text-align: center }
